RESOLVED FIXED102705
[EFL][TexMap] Complie error when considering warnings as errors
https://bugs.webkit.org/show_bug.cgi?id=102705
Summary [EFL][TexMap] Complie error when considering warnings as errors
Yael
Reported 2012-11-19 12:19:57 PST
/home/yael/webkit/ws1/Source/WebCore/platform/graphics/texmap/TextureMapperGL.cpp: In function ‘float* WebCore::gaussianKernel()’: /home/yael/webkit/ws1/Source/WebCore/platform/graphics/texmap/TextureMapperGL.cpp:850:30: error: comparison between signed and unsigned integer expressions [-Werror=sign-compare] /home/yael/webkit/ws1/Source/WebCore/platform/graphics/texmap/TextureMapperGL.cpp:857:30: error: comparison between signed and unsigned integer expressions [-Werror=sign-compare] cc1plus: all warnings being treated as errors
Attachments
Patch (1.23 KB, patch)
2012-11-19 12:23 PST, Yael
no flags
Yael
Comment 1 2012-11-19 12:23:58 PST
WebKit Review Bot
Comment 2 2012-11-19 12:59:35 PST
Comment on attachment 175022 [details] Patch Clearing flags on attachment: 175022 Committed r135188: <http://trac.webkit.org/changeset/135188>
WebKit Review Bot
Comment 3 2012-11-19 12:59:39 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.