[EFL][TexMap] Complie error when considering warnings as errors https://bugs.webkit.org/show_bug.cgi?id=102705

Patch by Yael Aharon <yael.aharon@intel.com> on 2012-11-19
Reviewed by Kenneth Rohde Christiansen.

Change GaussianKernelHalfWidth to unsigned.

No new tests.

* platform/graphics/texmap/TextureMapperGL.cpp:
(WebCore):

Canonical link: https://commits.webkit.org/120862@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@135188 268f45cc-cd09-0410-ab3c-d52691b4dbfc